--- a/src/sample/patient.fxml
+++ b/src/sample/patient.fxml
@@ -1,28 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.patientController">
    <children>
-      <Label text="Patients Name" StackPane.alignment="TOP_LEFT">
+      <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0">
+         <children>
+            <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="200.0">
+               <StackPane.margin>
+                  <Insets />
+               </StackPane.margin>
+               <children>
+                  <TextArea disable="true" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="320.0" prefWidth="200.0" />
+                  <Label text="PATIENT DETAILS" StackPane.alignment="TOP_CENTER">
+                     <font>
+                        <Font name="Ubuntu Bold" size="18.0" />
+                     </font>
+                     <StackPane.margin>
+                        <Insets top="10.0" />
+                     </StackPane.margin>
+                  </Label>
+                  <TextArea fx:id="remarks" focusTraversable="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="200.0">
+                     <StackPane.margin>
+                        <Insets top="70.0" />
+                     </StackPane.margin>
+                  </TextArea>
+                  <Label fx:id="patientName" text="yashraj  jangir" textAlignment="CENTER">
+                     <font>
+                        <Font name="Ubuntu Bold" size="18.0" />
+                     </font>
+                     <StackPane.margin>
+                        <Insets bottom="120.0" />
+                     </StackPane.margin>
+                  </Label>
+                  <ImageView fx:id="gender" fitHeight="42.0" fitWidth="315.0" pickOnBounds="true" preserveRatio="true">
+                     <StackPane.margin>
+                        <Insets bottom="200.0" />
+                     </StackPane.margin>
+                     <image>
+                        <Image url="@../photos/male.png" />
+                     </image>
+                  </ImageView>
+                  <Button fx:id="editRemarksBtn" mnemonicParsing="false" onAction="#callEditRemarks" prefHeight="26.0" prefWidth="61.0" text="SAVE">
+                     <StackPane.margin>
+                        <Insets left="140.0" top="250.0" />
+                     </StackPane.margin>
+                  </Button>
+               </children>
+            </StackPane>
+         </children>
+      </StackPane>
+      <Button fx:id="backBtn" mnemonicParsing="false" onAction="#callBack" text="BACK" StackPane.alignment="TOP_LEFT">
          <StackPane.margin>
-            <Insets left="30.0" top="30.0" />
+            <Insets left="20.0" top="20.0" />
          </StackPane.margin>
-         <font>
-            <Font size="16.0" />
-         </font>
-      </Label>
-      <Label layoutX="40.0" layoutY="40.0" text="Patients ID" StackPane.alignment="TOP_LEFT">
-         <font>
-            <Font size="16.0" />
-         </font>
-         <StackPane.margin>
-            <Insets left="30.0" top="50.0" />
-         </StackPane.margin>
-      </Label>
+      </Button>
    </children>
 </StackPane>
