--- a/src/sample/patient.fxml
+++ b/src/sample/patient.fxml
@@ -32,12 +32,12 @@
                         <Insets top="70.0" />
                      </StackPane.margin>
                   </TextArea>
-                  <Label fx:id="patientName" text="yashraj  jangir" textAlignment="CENTER">
+                  <Label fx:id="patientName" alignment="CENTER_RIGHT" prefHeight="21.0" prefWidth="145.0" text="NAME" textAlignment="RIGHT">
                      <font>
                         <Font name="Ubuntu Bold" size="18.0" />
                      </font>
                      <StackPane.margin>
-                        <Insets bottom="120.0" />
+                        <Insets bottom="120.0" right="60.0" />
                      </StackPane.margin>
                   </Label>
                   <ImageView fx:id="gender" fitHeight="42.0" fitWidth="315.0" pickOnBounds="true" preserveRatio="true">
@@ -53,6 +53,14 @@
                         <Insets left="140.0" top="250.0" />
                      </StackPane.margin>
                   </Button>
+                  <Label fx:id="patientAge" layoutX="30.0" layoutY="100.0" text="age" textAlignment="CENTER">
+                     <font>
+                        <Font name="Ubuntu" size="18.0" />
+                     </font>
+                     <StackPane.margin>
+                        <Insets bottom="120.0" left="140.0" />
+                     </StackPane.margin>
+                  </Label>
                </children>
             </StackPane>
          </children>
