--- a/src/sample/notifications.fxml
+++ b/src/sample/notifications.fxml
@@ -3,23 +3,14 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <StackPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1"
-           xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.patientsAndScansController">
-    <Button fx:id="registerPatientBTN" mnemonicParsing="false" onAction="#callRegisterPatient" text="Register patient"
-            StackPane.alignment="TOP_RIGHT">
-        <StackPane.margin>
-            <Insets right="20.0" top="70.0"/>
-        </StackPane.margin>
-    </Button>
+           xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.notificationsController">
+    <Label text="notifications"/>
     <StackPane maxHeight="40.0" prefHeight="40.0" prefWidth="600.0" StackPane.alignment="TOP_CENTER">
         <Button fx:id="helpAndFaqBTN" minHeight="25.0" mnemonicParsing="false" onAction="#callHelpAndFaq"
                 text="Help &amp; FAQ" StackPane.alignment="TOP_LEFT">
@@ -30,7 +21,7 @@
                 <Insets left="300.0" top="7.0"/>
             </StackPane.margin>
         </Button>
-        <Button fx:id="patientsAndScansBTN" disable="true" minHeight="25.0" mnemonicParsing="false"
+        <Button fx:id="patientsAndScansBTN" minHeight="25.0" mnemonicParsing="false"
                 onAction="#callPatientsAndScans" text="Patients &amp; scans" StackPane.alignment="TOP_LEFT">
             <font>
                 <Font size="10.0"/>
@@ -89,9 +80,9 @@
                 <Insets right="55.0" top="7.0"/>
             </StackPane.margin>
         </Button>
-        <Button fx:id="notificationBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0"
-                mnemonicParsing="false" onAction="#callNotifications" prefHeight="25.0" prefWidth="25.0"
-                StackPane.alignment="TOP_RIGHT">
+        <Button fx:id="notificationBTN" disable="true" maxHeight="25.0" maxWidth="25.0" minHeight="25.0"
+                minWidth="25.0" mnemonicParsing="false" onAction="#callNotifications" prefHeight="25.0"
+                prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
             <graphic>
                 <ImageView fitHeight="20.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                     <Image url="@../photos/notifications.png"/>
@@ -120,46 +111,4 @@
             </StackPane.margin>
         </Button>
     </StackPane>
-    <VBox prefHeight="200.0" prefWidth="100.0">
-        <StackPane.margin>
-            <Insets top="100.0"/>
-        </StackPane.margin>
-        <HBox maxWidth="1.7976931348623157E308" prefHeight="186.0" prefWidth="600.0">
-            <ListView fx:id="patientListName" cacheShape="false" centerShape="false" focusTraversable="false"
-                      maxWidth="1.7976931348623157E308" prefHeight="100.0" scaleShape="false"
-                      HBox.hgrow="ALWAYS"/>
-            <ListView fx:id="patientListLD" cacheShape="false" centerShape="false" focusTraversable="false"
-                      layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" prefHeight="100.0"
-                      scaleShape="false" HBox.hgrow="ALWAYS"/>
-            <ListView fx:id="patientListPE" cacheShape="false" centerShape="false" focusTraversable="false"
-                      layoutX="219.0" layoutY="10.0" maxWidth="1.7976931348623157E308" prefHeight="100.0"
-                      scaleShape="false" HBox.hgrow="ALWAYS">
-                <HBox.margin>
-                    <Insets/>
-                </HBox.margin>
-            </ListView>
-        </HBox>
-    </VBox>
-    <TextField fx:id="searchPatientField" maxWidth="200.0" minWidth="200.0" prefWidth="200.0"
-               promptText="search patient" StackPane.alignment="TOP_LEFT">
-        <StackPane.margin>
-          <Insets left="20.0" top="70.0"/>
-        </StackPane.margin>
-    </TextField>
-    <Button fx:id="searchBtn" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false"
-            onAction="#callSearch" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_LEFT">
-        <StackPane.margin>
-          <Insets left="220.0" top="70.0"/>
-        </StackPane.margin>
-        <graphic>
-            <ImageView fitHeight="21.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                <Image url="@../photos/search.png"/>
-            </ImageView>
-        </graphic>
-    </Button>
-    <Label fx:id="noPatientMatchLbl" textFill="RED" StackPane.alignment="TOP_LEFT">
-        <StackPane.margin>
-          <Insets left="250.0" top="80.0"/>
-        </StackPane.margin>
-    </Label>
 </StackPane>
