--- a/src/sample/LBT/chatBubble.fxml
+++ b/src/sample/LBT/chatBubble.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<StackPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RCP.chatBubbleController">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
+
+<StackPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LBT.chatBubbleController">
     <Label text="chat bubble" />
     <StackPane maxHeight="40.0" prefHeight="40.0" prefWidth="600.0" StackPane.alignment="TOP_CENTER">
-        <Button fx:id="appointmentBTN" minHeight="25.0" mnemonicParsing="false" onAction="#callAppointment" text="Appointment" StackPane.alignment="TOP_LEFT">
+        <Button fx:id="labtestsBTN" minHeight="25.0" mnemonicParsing="false" onAction="#callLabtests" text="Labtests" StackPane.alignment="TOP_LEFT">
             <font>
                 <Font size="10.0" />
             </font>
@@ -76,7 +79,7 @@
         </Button>
         <Button fx:id="chatBubbleBTN" disable="true" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callChatBubble" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
             <graphic>
-                <ImageView fitHeight="21.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
+                <ImageView disable="true" fitHeight="21.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                     <Image url="@../../photos/chat.png" />
                 </ImageView>
             </graphic>
@@ -85,14 +88,6 @@
             </font>
             <StackPane.margin>
                 <Insets right="135.0" top="7.0" />
-            </StackPane.margin>
-        </Button>
-        <Button fx:id="receiptSystemBTN" layoutX="200.0" layoutY="17.0" minHeight="25.0" mnemonicParsing="false" onAction="#callReceiptSystem" text="Receipt" StackPane.alignment="TOP_LEFT">
-            <font>
-                <Font size="10.0" />
-            </font>
-            <StackPane.margin>
-                <Insets left="280.0" top="7.0" />
             </StackPane.margin>
         </Button>
     </StackPane>
