--- a/src/sample/LBT/logout.fxml
+++ b/src/sample/LBT/logout.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.text.Font?>
 <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
            prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="sample.RCP.logoutController">
+           fx:controller="sample.LBT.logoutController">
    <Button fx:id="noBTN" mnemonicParsing="false" onAction="#callNo" text=" NO">
       <StackPane.margin>
          <Insets left="100.0"/>
