--- a/src/sample/LBT/settings.fxml
+++ b/src/sample/LBT/settings.fxml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<StackPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RCP.settingsController">
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
+
+<StackPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LBT.settingsController">
     <Label text="settings" />
     <StackPane maxHeight="40.0" prefHeight="40.0" prefWidth="600.0" StackPane.alignment="TOP_CENTER">
-        <Button fx:id="appointmentBTN" minHeight="25.0" mnemonicParsing="false" onAction="#callAppointment" text="Appointment" StackPane.alignment="TOP_LEFT">
+        <Button fx:id="labtestsBTN" minHeight="25.0" mnemonicParsing="false" onAction="#callLabtests" text="Labtests" StackPane.alignment="TOP_LEFT">
             <font>
                 <Font size="10.0" />
             </font>
@@ -85,14 +88,6 @@
             </font>
             <StackPane.margin>
                 <Insets right="135.0" top="7.0" />
-            </StackPane.margin>
-        </Button>
-        <Button fx:id="receiptSystemBTN" layoutX="200.0" layoutY="17.0" minHeight="25.0" mnemonicParsing="false" onAction="#callReceiptSystem" text="Receipt" StackPane.alignment="TOP_LEFT">
-            <font>
-                <Font size="10.0" />
-            </font>
-            <StackPane.margin>
-                <Insets left="280.0" top="7.0" />
             </StackPane.margin>
         </Button>
     </StackPane>
