--- a/src/sample/MDC/chatBubble.fxml
+++ b/src/sample/MDC/chatBubble.fxml
@@ -5,10 +5,10 @@
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<StackPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RCP.chatBubbleController">
+<StackPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MDC.chatBubbleController">
     <Label text="chat bubble" />
     <StackPane maxHeight="40.0" prefHeight="40.0" prefWidth="600.0" StackPane.alignment="TOP_CENTER">
-        <Button fx:id="appointmentBTN" minHeight="25.0" mnemonicParsing="false" onAction="#callAppointment" text="Appointment" StackPane.alignment="TOP_LEFT">
+        <Button fx:id="medicineBillBTN" minHeight="25.0" mnemonicParsing="false" onAction="#callMedicineBill" text="Medicine Bill" StackPane.alignment="TOP_LEFT">
             <font>
                 <Font size="10.0" />
             </font>
@@ -87,13 +87,6 @@
                 <Insets right="135.0" top="7.0" />
             </StackPane.margin>
         </Button>
-        <Button fx:id="receiptSystemBTN" layoutX="200.0" layoutY="17.0" minHeight="25.0" mnemonicParsing="false" onAction="#callReceiptSystem" text="Receipt" StackPane.alignment="TOP_LEFT">
-            <font>
-                <Font size="10.0" />
-            </font>
-            <StackPane.margin>
-                <Insets left="280.0" top="7.0" />
-            </StackPane.margin>
-        </Button>
+
     </StackPane>
 </StackPane>
