--- a/src/sample/RCP/modifyAppointment.fxml
+++ b/src/sample/RCP/modifyAppointment.fxml
@@ -5,8 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.StackPane?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RCP.modifyAppointmentController">
+<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RCP.modifyAppointmentController">
    <children>
       <TextField fx:id="patientIDTxt" maxWidth="200.0" minWidth="100.0" promptText="Enter Patient ID" StackPane.alignment="TOP_CENTER">
          <StackPane.margin>
@@ -28,7 +27,7 @@
             <Insets bottom="30.0" right="50.0" />
          </StackPane.margin>
       </Button>
-      <StackPane fx:id="innerStack" prefHeight="150.0" prefWidth="200.0">
+      <StackPane fx:id="innerStack" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" StackPane.alignment="CENTER">
          <StackPane.margin>
             <Insets bottom="80.0" top="100.0" />
          </StackPane.margin>
