--- a/src/sample/ADM/modifyUser.fxml
+++ b/src/sample/ADM/modifyUser.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.StackPane?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ADM.modifyUserController">
+<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ADM.modifyUserController">
    <children>
       <TextField fx:id="userIDTxt" maxWidth="175.0" minWidth="175.0" StackPane.alignment="TOP_CENTER">
          <StackPane.margin>
@@ -26,7 +26,7 @@
             <Insets left="250.0" top="15.0" />
          </StackPane.margin>
       </Button>
-      <StackPane prefHeight="150.0" prefWidth="200.0">
+      <StackPane fx:id="detailsPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" visible="false">
          <StackPane.margin>
             <Insets top="50.0" />
          </StackPane.margin>
@@ -71,42 +71,42 @@
                   <Insets bottom="20.0" left="100.0" />
                </StackPane.margin>
             </Label>
-            <TextField editable="false">
+            <TextField fx:id="userNameTxt" editable="false">
                <StackPane.margin>
                   <Insets bottom="300.0" left="200.0" right="100.0" />
                </StackPane.margin>
             </TextField>
-            <TextField editable="false" layoutX="210.0" layoutY="22.0">
+            <TextField fx:id="roleTxt" editable="false" layoutX="210.0" layoutY="22.0">
                <StackPane.margin>
                   <Insets bottom="160.0" left="200.0" right="100.0" />
                </StackPane.margin>
             </TextField>
-            <TextField editable="false" layoutX="210.0" layoutY="22.0">
+            <TextField fx:id="passwordTxt" editable="false" layoutX="210.0" layoutY="22.0">
                <StackPane.margin>
                   <Insets bottom="230.0" left="200.0" right="100.0" />
                </StackPane.margin>
             </TextField>
-            <TextField editable="false" layoutX="210.0" layoutY="92.0">
+            <TextField fx:id="designationTxt" editable="false" layoutX="210.0" layoutY="92.0">
                <StackPane.margin>
                   <Insets bottom="90.0" left="200.0" right="100.0" />
                </StackPane.margin>
             </TextField>
-            <TextField editable="false" layoutX="210.0" layoutY="127.0">
+            <TextField fx:id="phnoTxt" editable="false" layoutX="210.0" layoutY="127.0">
                <StackPane.margin>
                   <Insets bottom="20.0" left="200.0" right="100.0" />
                </StackPane.margin>
             </TextField>
-            <TextField editable="false" layoutX="210.0" layoutY="167.0">
+            <TextField fx:id="genderTxt" editable="false" layoutX="210.0" layoutY="167.0">
                <StackPane.margin>
                   <Insets left="200.0" right="100.0" top="50.0" />
                </StackPane.margin>
             </TextField>
-            <TextField editable="false" layoutX="210.0" layoutY="197.0">
+            <TextField fx:id="workEmailTxt" editable="false" layoutX="210.0" layoutY="197.0">
                <StackPane.margin>
                   <Insets left="200.0" right="100.0" top="120.0" />
                </StackPane.margin>
             </TextField>
-            <TextArea editable="false" maxHeight="50.0" prefHeight="248.0" prefWidth="600.0">
+            <TextArea fx:id="addressTxt" editable="false" maxHeight="50.0" prefHeight="248.0" prefWidth="600.0">
                <StackPane.margin>
                   <Insets left="200.0" right="100.0" top="215.0" />
                </StackPane.margin>
@@ -204,7 +204,66 @@
                   <Insets bottom="20.0" left="20.0" />
                </StackPane.margin>
             </Button>
+            <Button fx:id="saveBtn" mnemonicParsing="false" onAction="#callSave" text="Save Changes" StackPane.alignment="BOTTOM_RIGHT">
+               <StackPane.margin>
+                  <Insets bottom="20.0" right="20.0" />
+               </StackPane.margin>
+            </Button>
          </children>
+      </StackPane>
+      <StackPane fx:id="savePane" maxHeight="100.0" maxWidth="350.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="350.0" style="-fx-background-color: white;" visible="false" StackPane.alignment="TOP_CENTER">
+         <StackPane.margin>
+            <Insets top="15.0" />
+         </StackPane.margin>
+         <children>
+            <Button fx:id="yesBTN" mnemonicParsing="false" onAction="#callYes" text="Yes" StackPane.alignment="BOTTOM_CENTER">
+               <StackPane.margin>
+                  <Insets bottom="15.0" right="50.0" />
+               </StackPane.margin>
+            </Button>
+            <Button fx:id="noBTN" layoutX="140.0" layoutY="69.0" mnemonicParsing="false" onAction="#callNo" text="No" StackPane.alignment="BOTTOM_CENTER">
+               <StackPane.margin>
+                  <Insets bottom="15.0" left="50.0" />
+               </StackPane.margin>
+            </Button>
+            <Label text="The below details will be saved." textAlignment="CENTER">
+               <StackPane.margin>
+                  <Insets bottom="50.0" />
+               </StackPane.margin>
+            </Label>
+            <Label layoutX="81.0" layoutY="52.0" text="Are You Sure?" textAlignment="CENTER">
+               <StackPane.margin>
+                  <Insets bottom="10.0" />
+               </StackPane.margin>
+            </Label>
+         </children>
+      </StackPane>
+      <StackPane fx:id="deletePane" layoutX="135.0" layoutY="25.0" maxHeight="100.0" maxWidth="350.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="350.0" style="-fx-background-color: white;" visible="false" StackPane.alignment="TOP_CENTER">
+         <children>
+            <Button fx:id="yesDeleteBTN" mnemonicParsing="false" onAction="#callYesDelete" text="Yes" StackPane.alignment="BOTTOM_CENTER">
+               <StackPane.margin>
+                  <Insets bottom="15.0" right="50.0" />
+               </StackPane.margin>
+            </Button>
+            <Button fx:id="noDeleteBTN" layoutX="140.0" layoutY="69.0" mnemonicParsing="false" onAction="#callNoDelete" text="No" StackPane.alignment="BOTTOM_CENTER">
+               <StackPane.margin>
+                  <Insets bottom="15.0" left="50.0" />
+               </StackPane.margin>
+            </Button>
+            <Label text="User Account for below user will be deleted." textAlignment="CENTER">
+               <StackPane.margin>
+                  <Insets bottom="50.0" />
+               </StackPane.margin>
+            </Label>
+            <Label layoutX="81.0" layoutY="52.0" text="Are You Sure?" textAlignment="CENTER">
+               <StackPane.margin>
+                  <Insets bottom="10.0" />
+               </StackPane.margin>
+            </Label>
+         </children>
+         <StackPane.margin>
+            <Insets top="15.0" />
+         </StackPane.margin>
       </StackPane>
    </children>
 </StackPane>
