--- a/src/sample/login.fxml
+++ b/src/sample/login.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.loginController">
+<StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.loginController">
    <TextField fx:id="loginIdField" focusTraversable="false" layoutX="50.0" layoutY="50.0" maxHeight="10.0" maxWidth="250.0" prefHeight="10.0" prefWidth="117.0" promptText="ID">
       <StackPane.margin>
          <Insets bottom="150.0" />
@@ -48,9 +48,9 @@
          <Insets top="50.0" />
       </StackPane.margin>
    </Button>
-   <Button fx:id="troublebtn" mnemonicParsing="false" onAction="#troubleLogin" prefHeight="26.0" prefWidth="147.0" text="Trouble in login">
+   <Button fx:id="troublebtn" maxWidth="250.0" mnemonicParsing="false" onAction="#troubleLogin" prefHeight="26.0" prefWidth="250.0" text="Trouble in login" StackPane.alignment="CENTER">
       <StackPane.margin>
-         <Insets right="380.0" top="290.0" />
+         <Insets top="150.0" />
       </StackPane.margin>
    </Button>
    <Label text="OPHTHALMA">
